[package]
name = "gitgarden"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.5"
http-body-util = "0.1.2"
log = "0.4.22"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12.9", features = ["json"] }
rustint = "0.1.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0.69"
tl = "0.7.8"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
