[package]
name = "gitgarden"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
base64 = "0.22.1"
chrono = "0.4.40"
dotenv = "0.15.0"
env_logger = "0.11.8"
http-body-util = "0.1.3"
log = "0.4.27"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
rustint = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.69"
tl = "0.7.8"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "signal"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
