[package]
name = "gitgarden"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
chrono = "0.4.40"
dotenvy = "0.15.7"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.13.4", features = ["json"] }
rustint = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tl = "0.7.8"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros", "signal"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
